[gd_scene load_steps=2 format=3 uid="uid://c7nslbqqb1w5u"]

[ext_resource type="Script" path="res://main.gd" id="1_cj63c"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cj63c")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputList" type="VBoxContainer" parent="HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GroupsList" type="VBoxContainer" parent="HSplitContainer/VSplitContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical_scroll_mode = 2

[node name="ActionEvents" type="VBoxContainer" parent="HSplitContainer/ScrollContainer"]
layout_mode = 2
